[package]
name = "cadnano-format"
version = "0.1.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>", "pe@pijul.org <pierre-etienne.meunier@mu.ie>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/thenlevy/codenano"

[dependencies]
palette = "*"
serde_json = "*"
serde_derive = "*"
serde = "*"
log = "*"
