[package]
name = "codenano-gui"
version = "0.1.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>", "pe@pijul.org <pierre-etienne.meunier@mu.ie>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/thenlevy/codenano"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "*"
rand = { version = "*", features = ["stdweb", "wasm-bindgen"] }
chrono = "*"
cfg-if = "0.1.2"
wasm-bindgen = { version = "=0.2.43", features = [ "serde-serialize" ] }
js-sys = "*"
web-sys = { version = "*", features = [
  "Attr",
  "CssStyleDeclaration",
  "Window",
  "Document",
  "HtmlElement",
  "HtmlDivElement",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "Element",
  "Node",
  "DomRect",
  "CanvasRenderingContext2d",
  "WebGl2RenderingContext",
  "WebGlRenderingContext",
  "WebGlUniformLocation",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "Path2d",
  "Event",
  "KeyboardEvent",
  "MouseEvent",
  "WheelEvent",
  "EventTarget",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
wasm-bindgen-futures = "*"
futures = "*"
serde_derive = "*"
serde = "*"
finiteelement = { path = "../finiteelement" }
#geometry = { path = "../geometry" }
nanostructure = { path = "../nanostructure" }
design = { path = "../design" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
