[package]
name = "finiteelement_macros"
description = "A library to create procedural macros that define types implementing FiniteElement"
version = "0.1.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>", "pe@pijul.org <pierre-etienne.meunier@mu.ie>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/thenlevy/codenano"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rand = "0.7.0"
serde_json = "1.0.39"
num-traits = "0.2.8"

